--- a/app/src/main/res/values-pt/strings.xml
+++ b/app/src/main/res/values-pt/strings.xml
@@ -24,4 +24,46 @@
     <string name="label_config_play_alarm_when_app_closed">Tocar alarme até depois que o app é fechado</string>
     <string name="label_play_alarm_after_device_reboot">Tocar alarme até depois de reiniciar o celular</string>
     <string name="cor_do_tema_do_app">Cor de tema do app</string>
+    <string name="you_haven_t_finished_any_medication_yet">você ainda não finalizou nenhum medicamento</string>
+    <string name="medicine">Medicamento</string>
+    <string name="finished_at">Finalizado em:</string>
+    <string name="medicine_name">nome medicamento</string>
+    <string name="times_a_day">vezes por dia</string>
+    <string name="how_long_will_you_take_this_medicine">Por quanto tempo você vai tomar esse medicamento?</string>
+    <string name="treatment_time">treatment time</string>
+    <string name="days">dias</string>
+    <string name="months">meses</string>
+    <string name="pick_time_of_first_dose">escolha horário primeira dose</string>
+    <string name="first_dose_hint">hora 1ª dose (ex.: 14:20)</string>
+    <string name="treatment_start_date">dia início tratamento</string>
+    <string name="confirm_medication">confirmar medicamento</string>
+    <string name="treatment_start">início em:</string>
+    <string name="end_in">término em:</string>
+    <string name="dose_time">hora da dose:</string>
+    <string name="medicines">Medicamentos</string>
+    <string name="history">Histórico</string>
+    <string name="medicine_already_registered">Já existe um medicamento registrado com esse nome!</string>
+    <string name="error_registering_medication">Erro ao cadastrar medicamento</string>
+    <string name="registered_successfully">registrado com sucesso!</string>
+    <string name="dose_time_already_passed">a data e hora que você escolheu para a primeira dose já passaram!</string>
+    <string name="error_registering_medication_check_data">Erro ao registrar medicamento. Confira o preenchimento dos dados.</string>
+    <string name="the_medicine">o medicamento</string>
+    <string name="was_excluded">foi excluído</string>
+    <string name="alarm_activated">Alarme ativado para a próxima dose de</string>
+    <string name="at">às</string>
+    <string name="doses_are_over">as doses desse remédio acabaram!</string>
+    <string name="dose_taken">dose tomada!</string>
+    <string name="take">tome</string>
+    <string name="do_u_wanna">Você quer tomar a dose agora</string>
+    <string name="now">agora</string>
+    <string name="yes">Sim</string>
+    <string name="no">Não</string>
+    <string name="dose_already_taken">Dose já tomada</string>
+    <string name="dose_already_taken2">você já tomou esta dose!</string>
+    <string name="ok">OK</string>
+    <string name="sure_delete">Tem certeza de que deseja excluir o</string>
+    <string name="alarm_deactivated_for">Alarme desativado para</string>
+    <string name="take_dose_of">Tome a dose de</string>
+    <string name="finished">finalizado</string>
+
 </resources>
