--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -20,11 +20,50 @@
     <string name="res_btn_tomei_o_medicamento">Take dose</string>
     <string name="res_sem_medicamentos">You don\'t have any medication registered!</string>
     <string name="res_dica_confirmar_dose">* Click on the red dot next to the dose time to confirm that you took your dose for that time!</string>
-    <string name="configurations_label">Configurations</string>
+    <string name="configurations_label">Settings</string>
     <string name="label_config_play_alarm_when_app_closed">Play alarm even after app is closed</string>
     <string name="label_play_alarm_after_device_reboot">Play alarm even after phone restart</string>
     <string name="cor_do_tema_do_app">App theme color</string>
     <string name="you_haven_t_finished_any_medication_yet">you haven\'t finished any medication yet</string>
     <string name="medicine">Medicine</string>
     <string name="finished_at">Finished at:</string>
+    <string name="medicine_name">medicine name</string>
+    <string name="times_a_day">times a day</string>
+    <string name="how_long_will_you_take_this_medicine">How long will you take this medicine?</string>
+    <string name="treatment_time">treatment time</string>
+    <string name="days">days</string>
+    <string name="months">months</string>
+    <string name="pick_time_of_first_dose">pick time of first dose</string>
+    <string name="first_dose_hint">1st dose time (ex.: 06:20)</string>
+    <string name="treatment_start_date">treatment start date</string>
+    <string name="confirm_medication">confirm medication</string>
+    <string name="treatment_start">Treatment start:</string>
+    <string name="end_in">End in:</string>
+    <string name="dose_time">dose time</string>
+    <string name="medicines">Medicines</string>
+    <string name="history">History</string>
+    <string name="medicine_already_registered">There is already a medicine registered with that name!</string>
+    <string name="error_registering_medication">Error registering medication</string>
+    <string name="registered_successfully">registered successfully!</string>
+    <string name="dose_time_already_passed">the date and time you chose for the first dose has already passed!</string>
+    <string name="error_registering_medication_check_data">Error registering medication. Check the filling of the data.</string>
+    <string name="the_medicine">the medicine</string>
+    <string name="was_excluded">was excluded</string>
+    <string name="alarm_activated">Alarm activated for next dose of</string>
+    <string name="at">at</string>
+    <string name="doses_are_over">the doses for this medicine are over!</string>
+    <string name="dose_taken">dose taken!</string>
+    <string name="take">take</string>
+    <string name="do_u_wanna">Do you want to take the dose now</string>
+    <string name="now">now</string>
+    <string name="yes">Yes</string>
+    <string name="no">No</string>
+    <string name="dose_already_taken">Dose already taken</string>
+    <string name="dose_already_taken2">you\'ve already taken this dose!</string>
+    <string name="ok">OK</string>
+    <string name="sure_delete">Are you sure you want to delete</string>
+    <string name="alarm_deactivated_for">Alarm deactivated for</string>
+    <string name="take_dose_of">Take the dose of</string>
+    <string name="finished">finished</string>
+
 </resources>
